<resources>
    <string name="app_name">Verkoop</string>
    <string name="app_logo">logo</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="facebook_app_id">984566338553455</string>
    <string name="fb_login_protocol_scheme">fb984566338553455</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="or">Or</string>
    <string name="login_with">Login with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Please enter email.</string>
    <string name="enter_valid_email">Please enter valid email address.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="enter_password_length">Password must contain at least 6 characters.</string>
    <string name="enter_con_password">Please enter confirm password.</string>
    <string name="match_password">Password did not match.</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_">SIGN UP</string>
    <string name="login_">Login</string>
    <string name="enter_name">Please enter name.</string>
    <string name="enter_user_name">Please enter username.</string>
    <string name="check_internet">Please check your internet connection.</string>
    <string name="try_again_later">Please try again later.</string>
    <string name="storage_permission_denied">Storage Permission Denied.</string>
    <string name="face_log">facebookLogin</string>
    <string name="google_plus">googlePlusLogin</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="skip">Skip</string>
    <string name="select_any">Select any</string>
    <string name="three_categories">Three Categories</string>
    <string name="selected">Selected : </string>
    <string name="next">NEXT</string>
    <string name="next_s">Next</string>
    <string name="it_is_long_established_fact_that_a_ready_will_be_distracted_by_the_redable_content">It is long established fact that a reader will be distracted by the readable content.</string>
    <string name="done">DONE</string>
    <string name="pick_any">Pick any</string>
    <string name="one_option">One option</string>
    <string name="maybe_later">MAYBE LATER</string>
    <string name="browse">Browse</string>
    <string name="activities">Activities</string>
    <string name="profile">Profile</string>
    <string name="favourite">favourite</string>
    <string name="favourites">Favourites</string>
    <string name="chat">chat</string>
    <string name="category">Category</string>
    <string name="search">Search Products</string>
    <string name="search_cars">Search cars</string>
    <string name="sell">SELL</string>
    <string name="view_all">View All</string>
    <string name="select_three">Please select at least 3 categories.</string>
    <string name="_2_day_ago">2 day ago</string>
    <string name="louis_wayne">Louis Wayne</string>
    <string name="categories">Categories</string>
    <string name="health_beauty"><![CDATA[Health & Beauty]]></string>
    <string name="filter">Filter</string>
    <string name="nearby">Nearby</string>
    <string name="popular">Popular</string>
    <string name="recently_added">Recently Added</string>
    <string name="price_high_to_low">Price : High to Low</string>
    <string name="price_low_to_high">Price : Low to High</string>
    <string name="sort">Sort</string>
    <string name="item_condition">Item Condition</string>
    <string name="price">Price</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="used">Used</string>
    <string name="apply">APPLY</string>
    <string name="lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer.</string>
    <string name="comments">Comments</string>
    <string name="post_a_comment">Post a Comment</string>
    <string name="share">Share</string>
    <string name="casual_mens_shoes">Casual Mens Shoes</string>
    <string name="_25">25</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="shoes">:Shoes</string>
    <string name="make_offer">Make Offer</string>
    <string name="what_are_you">What are you Selling?</string>
    <string name="listing_today">listing today ?</string>
    <string name="reset">Reset</string>
    <string name="photos">Photos</string>
    <string name="multiple">0 / 10</string>
    <string name="add_details">Add Details</string>
    <string name="back">back</string>
    <string name="image">image</string>
    <string name="camera">camera</string>
    <string name="selected_photos">Selected Photos :</string>
    <string name="select_category">Select Category</string>
    <string name="description">Description</string>
    <string name="save">SAVE</string>
    <string name="men_s_fashion">Men\'s Fashion</string>
    <string name="post_added">Post Added</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="following">Following</string>
    <string name="_1281">1281</string>
    <string name="followers">Followers</string>
    <string name="_250">250</string>
    <string name="posts">POSTS</string>
    <string name="background">background</string>
    <string name="travis_desantis">Travis Desantis</string>
    <string name="setting">setting</string>
    <string name="_281_wilkinson_street">281 Wilkinson Street</string>
    <string name="nashville_tennessee_tn_37203">Nashville,Tennessee(TN),37203</string>
    <string name="_02_december_2019">: 02 December 2019</string>
    <string name="verified">Verified</string>
    <string name="phone_number">: Phone number</string>
    <string name="dot">dot</string>
    <string name="dollar">R </string>
    <string name="enter_item_name">Please enter item name.</string>
    <string name="enter_category_name">Please select category.</string>
    <string name="enter_price">Please enter price.</string>
    <string name="enter_min">Please enter min price.</string>
    <string name="enter_max">Please enter max price.</string>
    <string name="enter_description">Please enter description.</string>
    <string name="upload_image">Please upload atleast one item image.</string>
    <string name="deal_option">Deal Option</string>
    <string name="meet_up">Meet-up</string>
    <string name="describe_what_you_are_selling_and_include_any_details_a_buyer_might_be_insterested_in_people_love_items_what_stories">Describe what you are selling and include any details a buyer might be interested in. People love items what stories!</string>
    <string name="location">Location</string>
    <string name="your_meet_up_location_and_schedule">Your meet up location and schedule</string>
    <string name="deal_location">Deal Location</string>
    <string name="leave_without_selecting_meet_up_location">Leave without selecting meet-up location?</string>
    <string name="selecting_a_location_helps_more_buyers_to_find_you_item_we_recommend_adding_one">Selecting a location helps more buyers to find you item. We recommend adding one.</string>
    <string name="resume">Resume</string>
    <string name="leave">Leave</string>
    <string name="three_category">You cannot select more than 3 categories.</string>
    <string name="application_crash">Application Crash</string>
    <string name="pric">Price :</string>
    <string name="shopr">Sort :</string>
    <string name="account_setting">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notification">Notification</string>
    <string name="date_privacy_settings"><![CDATA[Data & Privacy Settings]]></string>
    <string name="need_help">Need Help</string>
    <string name="help_center">Help Center</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_carousell">About Verkoop</string>
    <string name="about_this_app">About This App</string>
    <string name="term_of_services">Term of Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="email_notification">Email Notification</string>
    <string name="push_notification">Push Notification</string>
    <string name="notifications">Notifications</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="select_10_images">Can\'t select more than 10 images.</string>
    <string name="coins">Coins</string>
    <string name="get_coins">Get Coins</string>
    <string name="history">History</string>
    <string name="balance">Balance</string>
    <string name="use_coins_for_bumps_and_listing_frees">Use Coins for Bumps and listing Frees</string>
    <string name="qr_code">QR Code</string>
    <string name="username">Username</string>
    <string name="public_profile">PUBLIC PROFILE</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="private_profile">PRIVATE PROFILE</string>
    <string name="gender">Gender</string>
    <string name="country_prompt">Choose a country</string>
    <string name="birthday">Birthday</string>
    <string name="set_your_date_of_birth">Set your date of birth</string>
    <string name="last_name">Last Name</string>
    <string name="mycity">MyCity</string>
    <string name="bio">Bio</string>
    <string name="mobile">Mobile</string>
    <string name="website">Website</string>
    <string name="first_name">First Name</string>
    <string name="my_profile">My Profile</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="pick_from">Pick From</string>
    <string name="gallery">gallery</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="profile_updated">Your profile has been updated.</string>
    <string name="changed">Password changed successfully.</string>
    <string name="address">Address</string>
    <string name="post">Post</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="are_you_sure_you_want_to_delete_this_comment">Are you sure you want to delete this comment?</string>
    <string name="yes">Yes</string>
    <string name="deleted_successfully">Comment deleted successfully.</string>
    <string name="banner_deleted_successfully">Banner deleted successfully.</string>
    <string name="banner_renewed_successfully">Banner renewed successfully.</string>
    <string name="this_listing_advertises_item_that_are_not_allowed_on_the_marketplace_e_g_durings_tabacco_adult_mature_content_animals_animal_product_and_more"><![CDATA[This listing advertises item that are not allowed on the marketplace(e.g:Durings & Tabacco,Adult & Mature Content, Animals & Animal Product and more.)]]></string>
    <string name="submit">Submit</string>
    <string name="follow">Follow</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">Unblock User</string>
    <string name="upload_banner">Banner</string>
    <string name="scan_to_follow_me_on_verkoop">Scan to follow me on Verkoop</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="vervo">Vervo</string>
    <string name="order">Order</string>
</resources>