<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_browse"
        android:icon="@drawable/browsw_selector"
        android:title="@string/browse" />

    <item
        android:id="@+id/menu_coupon"
        android:icon="@drawable/coupon_selector"
        android:title="Coupons" />

    <item
        android:id="@+id/menu_order"
        android:icon="@drawable/order_selector"
        android:title="@string/order" />


    <item
        android:id="@+id/menu_vervo"
        android:icon="@drawable/vervo_selector"
        android:title="@string/vervo" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/profile_selector"
        android:title="@string/profile" />

</menu>