<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_location" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_18"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardElevation="@dimen/dp_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dp_8">

            <ImageView
                android:id="@+id/ivQrCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_10"
                android:contentDescription="@string/qr_code" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
    <com.verkoop.fonts.textView.GothicThinTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:gravity="center"
        android:text="@string/scan_to_follow_me_on_verkoop"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/sp_18" />

    <ImageView
        android:id="@+id/ivScanCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_14"
        android:background="@drawable/transparent_rectangle"
        android:padding="@dimen/dp_35"
        android:src="@mipmap/camera"
        android:contentDescription="@string/camera" />

    <com.verkoop.fonts.textView.GothicThinTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:gravity="center"
        android:text="@string/scan_qr_code"
        android:textColor="@color/dark_black"
        android:textSize="@dimen/sp_18" />
    </LinearLayout>
</LinearLayout>